--- a/ProyectoCampingParty/src/main/java/VISTA/ClienteSignOn.form
+++ b/ProyectoCampingParty/src/main/java/VISTA/ClienteSignOn.form
@@ -358,12 +358,14 @@
                 </Component>
                 <Component class="javax.swing.JPasswordField" name="jPasswordField1">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="jPasswordField1"/>
+                    <Property name="text" type="java.lang.String" value="zzzzzzzzzzzzzzzzzzzzzzzz"/>
                     <Property name="disabledTextColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="0" green="0" red="0" type="rgb"/>
                     </Property>
                     <Property name="echoChar" type="char" value="*"/>
-                    <Property name="enabled" type="boolean" value="false"/>
+                    <Property name="enabled" type="boolean" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                      <Connection code="true" type="code"/>
+                    </Property>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JButton" name="atras">
