--- a/ProyectoCampingParty/src/main/java/VISTA/CLienteLogLogin.form
+++ b/ProyectoCampingParty/src/main/java/VISTA/CLienteLogLogin.form
@@ -95,7 +95,7 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="jPasswordField1"/>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-          <Color id="Cursor Por defecto"/>
+          <Color id="Default Cursor"/>
         </Property>
       </Properties>
     </Component>
